# uhub

./: .cirrus.yml  .dockerignore  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Dockerfile  README  README.md  sonar-project.properties
.github/workflows/: dockerimage.yml
admin/: common.sh  make_pkg_deb.sh
autotest/: exotic  test.c  test_aa_init.tcc  test_cbuffer.tcc  test_config.tcc  test_credentials.tcc  test_flood.tcc  test_inf.tcc  test_ipfilter.tcc  test_list.tcc  test_log.tcc  test_message.tcc  test_misc.tcc  test_sid.tcc  test_tiger.tcc  test_timer.tcc  test_tokenizer.tcc  test_usermanager.tcc  test_zz_exit.tcc
autotest/ci/: build-and-test.sh  install-build-depends.sh
autotest/travis/: build-and-test.sh  install-build-depends.sh
cmake/Modules/: BuildType.cmake  FindSqlite3.cmake
debian/: changelog  control  rules  uhub.dirs  uhub.docs  uhub.init  uhub.logrotate  uhub.postinst
doc/: Doxyfile  compile.md  compile.txt  deb-package.md  description.txt  docker.md  extensions.txt  getstarted.md  getstarted.txt  motd.txt  plugins.conf  plugins.conf.in  rpm-package.md  ssl-documentation.txt  tls-documentation.md  uhub.1  uhub.conf  uhub.conf.in  uhub.spec
doc/init.d.RedHat/etc/logrotate.d/: uhub
doc/upstart/etc/init/: uhub.conf
src/: system.h.in  uhub.h  version.h.in
src/adc/: adcconst.h  message.c  message.h  sid.c
src/core/: auth.c  auth.h  command_parser.c  commands.c  config.c  config.h  config.py  config.xml  eventqueue.c  gen_config.c  gen_config.h  hub.c  hub.h  hubevent.c  inf.c  main.c  netevent.c  plugincallback.c  plugininvoke.c  plugininvoke.h  pluginloader.c  probe.c  route.c  user.c  user.h
src/network/: backend.c  common.h  connection.c  dnsresolver.c  epoll.c  ipcalc.c  kqueue.c  network.c  network.h  notify.c  openssl.c  select.c  timeout.c  tls.h
src/plugin_api/: command_api.h  handle.h  types.h
src/plugins/: mod_auth_simple.c  mod_auth_sqlite.c  mod_chat_history.c  mod_chat_history_sqlite.c  mod_chat_is_privileged.c  mod_chat_only.c  mod_example.c  mod_guest_passwd.c  mod_joins.c  mod_logging.c  mod_restrict.c  mod_topic.c  mod_users.c  mod_welcome.c
src/tools/: adcclient.c  adcrush.c  admin.c  coverity_models.c  uhub-passwd.c
src/util/: cbuffer.c  cbuffer.h  config_token.c  config_token.h  credentials.c  credentials.h  floodctl.c  list.c  list.h  log.c  log.h  memory.c  memory.h  misc.c  misc.h  rbtree.c  rbtree.h  threads.h  tiger.c
tests/: exotic  git-pre-commit.sh  update.sh
tests/auto/: README  init.tcc  test.c  test_cbuffer.tcc  test_commands.tcc  test_config.tcc  test_flood.tcc  test_hub.tcc  test_ipfilter.tcc  test_list.tcc  test_memory.tcc  test_message.tcc  test_misc.tcc  test_sid.tcc
tests/ci/: Dockerfile  Makefile  README.md  build-and-test.sh  install-build-depends.sh  print-env.sh
tests/passwd/: README  exit.tcc  init.tcc  test.c  test_passwd.tcc
tools/: generate_keyprint.sh  start-docker.sh  uhub-adc-redirector.py
